<resources>

    <string name="app_name">Cave à Flo</string>
    <string name="horaire"><b>Horaires d\'ouverture:</b>\nLundi : 11h à 20h\nMardi à vendredi : 11h à 21h\nSamedi : 10h30 à 20h</string>
    <string name="address"><b>Adresse:</b>\n3 allée de Bray,\n35510 CESSON-SÉVIGNÉ</string>
    <string name="navigation">3 allée de Bray,35510 CESSON-SÉVIGNÉ</string>
    <string name="tel">Tél. 02.90.78.02.25</string>
    <string name="menuRefresh">Rafraîchir la cave</string>
    <string name="menuimportexport">Import/Export</string>
    <string name="buttonNavigation">Lancer la navigation</string>
    <string name="button_delete">Supprimer</string>
    <string name="addbeer">Ajouter une bière</string>
    <string name="tab_cave">La cave à bières</string>
    <string name="tab_info">Infos pratiques</string>
    <string name="tab_news">Actus du site</string>
    <string name="update_ko">Erreur lors de la mise à jour de la cave</string>
    <string name="update_ok">Mise à jour de la cave terminée!</string>
    <string name="update_inprogress">Mise à jour de la cave en cours</string>
    <string name="filter_all">Toutes</string>
    <string name="filter_todrink">A goûter</string>
    <string name="filter_drunk">Goûtées</string>
    <string name="cave_beer_name">Nom</string>
    <string name="cave_beer_type">Robe</string>
    <string name="cave_beer_country">Pays</string>
    <string name="cave_beer_degre">Degré</string>
    <string name="cave_beer_rating">Note</string>
    <string name="cave_beer_drunk">Goûtée</string>
    <string name="button_validate">Valider</string>
    <string name="button_cancel">Annuler</string>
    <string name="button_calculer">Calculer</string>
    <string name="button_clear">Effacer</string>
    <string name="rate_string">Note: </string>
    <string name="create_title">Ajouter une bière</string>
    <string name="modify_title">Modifier une bière</string>
    <string name="degree_string">Degré: </string>
    <string name="dev_url"><i><b>App repository:</b>\nhttps://github.com/jlaloi/CaveFlo</i></string>
    <string name="drawer_open">Open navigation drawer</string>
    <string name="drawer_close">Close navigation drawer</string>
    <string name="action_settings"></string>
    <string name="news_url">http://www.cave-flo.com/actus/</string>
    <string name="pick_date">Changer</string>
    <string name="daterate">Dégustation le</string>
    <string name="numberdrunk">%1$s bière(s) goûtée(s) sur %2$s</string>
    <string name="loadingpage">Chargement de la page %1$s</string>
    <string name="buttonimport">Importer</string>
    <string name="buttonexport">Exporter</string>
    <string name="directory">Dossier</string>
    <string name="defaultDirectory">/Caveflo/</string>
    <string name="userbeerfile">customBeer.ext</string>
    <string name="userratingfile">ratingUser.ext</string>
    <string name="userbeerfiletext">Bières utilisateur:</string>
    <string name="userratingfiletext">Notations:</string>
    <string name="importexporttile">Configuration: Importer/Exporter</string>
    <string name="filenotfound">Fichier %1$s non trouvé.</string>
    <string name="filesimportok">Importation terminée</string>
    <string name="exportresult">%1$s bière(s) exportée(s), %2$s évalution(s) exportée(s) </string>
    <string name="ratinginfo">%1$s à %2$s° (%3$s)</string>
    <string name="alco_sexe_homme">Un homme</string>
    <string name="alco_sexe_femme">Une femme</string>
    <string name="alco_lega">En France, le taux légal est de 0,5g d\'alcool par litre de sang, à partir de 0.8g il s\'agit d\'un délit.\nLe taux d\'élimination de l\'alcool est en moyenne de 0,15 g / litre de sang / heure.</string>
    <string name="alco_result_ok"><b>%1$sg</b> d\'alcool par litre de sang.</string>
    <string name="alco_result_ko">Attention!! <b>%1$sg</b> d\'alcool par litre de sang.\n\nLe taux d\'alcoolémie sera sous la limite légale dans <b>%2$sh.</b></string>
    <string name="alco_error">Merci de vérifier les valeurs!</string>
    <string name="tab_alco">Estimation alcoolémie</string>
    <string name="alco_poid_1">de</string>
    <string name="alco_poid_2">kg</string>
    <string name="drink_note">Déscription</string>
    <string name="drink_degree">Degrée</string>
    <string name="drink_quantity">Volume (cl)</string>
    <string name="drink_hour">Heure</string>
    <string name="drink_action"></string>
    <string name="saved_weight">saved_weight</string>
    <string name="saved_sexe">saved_sexe</string>
    <string name="saved_hour">saved_hour</string>
   	<string name="drink_beer_added">Bière %1$s ajoutée au calcul d\'alcoolémie!</string>
   	<string name="alco_hour">Première boisson à</string>
</resources>