<menu xmlns:android="http://schemas.android.com/apk/res/android" >

    <item
        android:id="@+id/action_settings"
        android:icon="@drawable/ic_drawer"
        android:listSelector="@drawable/listitem_selector"
        android:showAsAction="always"
        android:title="@string/action_settings">
        <menu>
            <item
                android:id="@+id/menu_add_beer"
                android:title="@string/addbeer"/>
            <item
                android:id="@+id/menu_refresh"
                android:title="@string/menuRefresh"/>
            <item
                android:id="@+id/menu_impexp"
                android:title="@string/menuimportexport"/>
             <item
                android:id="@+id/menu_quit"
                android:title="@string/menuquit"/>
        </menu>
    </item>

</menu>