<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:layout_gravity="center"
        android:layout_marginTop="10dp"
        android:text="@string/app_name"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textIsSelectable="true"
        android:textSize="40sp"
        android:textStyle="bold" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:layout_gravity="center"
        android:layout_marginTop="30dp"
        android:text="@string/horaire"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textIsSelectable="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:layout_gravity="center"
        android:layout_marginTop="20dp"
        android:autoLink="phone"
        android:linksClickable="true"
        android:text="@string/tel"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textIsSelectable="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:layout_gravity="center"
        android:layout_marginTop="20dp"
        android:text="@string/address"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textIsSelectable="true" />

    <Button
        android:id="@+id/buttonNavigation"
        style="@style/defaultButton"
        android:layout_width="wrap_content"
        android:layout_height="36dp"
        android:layout_centerInParent="true"
        android:layout_gravity="center"
        android:layout_marginTop="20dp"
        android:text="@string/buttonNavigation" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_centerInParent="true"
        android:layout_gravity="bottom"
        android:gravity="center"
        android:autoLink="web"
        android:linksClickable="true"
        android:text="@string/dev_url"
        android:textSize="12sp"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textIsSelectable="true" />

</LinearLayout>